--- a/TwitterService.LoggerService/TwitterService.LoggerService.csproj
+++ b/TwitterService.LoggerService/TwitterService.LoggerService.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Contracts\TwitterService.Contracts.csproj" />
+    <ProjectReference Include="..\TwitterService.Contracts\TwitterService.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
